--- a/lonelyTwitter/AndroidManifest.xml
+++ b/lonelyTwitter/AndroidManifest.xml
@@ -4,6 +4,10 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
+    <uses-sdk 
+        android:minSdkVersion="17"
+        android:targetSdkVersion="17"/>
+    
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
