--- a/lonelyTwitterTests/AndroidManifest.xml
+++ b/lonelyTwitterTests/AndroidManifest.xml
@@ -4,6 +4,10 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
+	<uses-sdk 
+        android:minSdkVersion="17"
+        android:targetSdkVersion="17"/>
+    
     <instrumentation
         android:name="android.test.InstrumentationTestRunner"
         android:targetPackage="ca.ualberta.cs.lonelytwitter" />
